# overwatch-tracker

./: .gitignore  DEV_SETUP.md  README.md  dev-server.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  lib.rs  main.rs  player_detection.rs
src/components/: PlayerCard.tsx  PlayerList.tsx  StatsPanel.tsx
src/services/: statsService.ts
src/types/: stats.ts
